--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script src="//code.tidio.co/dt9ephajanyti3iohk7xqmhnhxi7pmiz.js" async></script> -->
   </body>
 </html>
